@@ -1,8 +1,9 @@
+import commands.AssistentCommand;
 import hints.*;
-import vraag.*;
 import rooms.*;
 import player.Player;
-import commands.*;
+import commands.CommandHandler;
+import vraag.*;
 
 import java.util.*;
 
@@ -15,26 +16,55 @@ public class Game {
         providers.add(new HelpHint());
         providers.add(new FunnyHint());
         HintSystem hintSystem = new HintSystem(providers);
+
+        // Assistent aanmaken en registreren
         AssistentCommand assistent = new AssistentCommand(hintSystem);
-        commands.CommandHandler.setAssistent(assistent);
+        CommandHandler.setAssistent(assistent);
 
         // Speler aanmaken
         Player speler = new Player(1);
         CommandHandler.setPlayer(speler);
 
-        // Kamers aanmaken
-        Room startRoom = new StartRoom(hintSystem, speler);
-        Room save1 = new SaveRoom(hintSystem, speler);
-        Room save2 = new SaveRoom(hintSystem, speler);
-        Room normal1 = new NormalRoom(hintSystem, new OpenVraag("Hoeveel dagen zitten er in een week?", "7"), speler);
-        Room normal2 = new NormalRoom(hintSystem, new OpenVraag("Wat is 5 x 5?", "25"), speler);
+        // Kamers aanmaken met vraagstrategieën
+        Room startRoom = new StartRoom(hintSystem,
+                new OpenVraag("Wat voor app/website is handig om te gebruiken voor SCRUM?", "Trello"), speler);
+        Room save1 = new SaveRoom(hintSystem,
+                new MeerkeuzeVraag("Waar staat DoD voor?",
+                        List.of("Design of Delivery", "Description of Development","Definition of Done", "Document of Decisions"),"Definition of Done"), speler);
+        Room save2 = new SaveRoom(hintSystem,
+                new MeerkeuzeVraag("Wat is het nut van Scrum-master?",
+                        List.of("Het faciliteren van het Scrum-proces en het wegnemen van obstakels voor het team.", "Het goedkeuren van code voordat deze wordt gedeployed.", "Het schrijven van alle user stories en technische documentatie.", "Het managen van het team als een traditionele projectmanager."),
+                        "Het faciliteren van het Scrum-proces en het wegnemen van obstakels voor het team." ), speler);
+
+        Room normal1 = new NormalRoom(hintSystem,
+                new MeerkeuzeVraag("Wat is een Sprint?",
+                        List.of(" Een vergaderweek waarin alleen wordt gepland en geëvalueerd.", "Een race om zoveel mogelijk werk te doen zonder pauzes.", "Een moment waarop het team feedback verzamelt van de klant.", "Een vast tijdsblok waarin een Scrum-team werkt aan het opleveren van een werkend product."),
+                        "Een vast tijdsblok waarin een Scrum-team werkt aan het opleveren van een werkend product."), speler);
+        Room normal2 = new NormalRoom(hintSystem,
+                new MeerkeuzeVraag("Waar staat DoR voor?",
+                        List.of("Definition of Ready", "Degree of Refinement", "Delivery of Results", "Definition of Review"), "Definition of Ready"), speler);
+
         Room easy1 = new EasyRoom(hintSystem,
-                new MeerkeuzeVraag("Wat komt er na A in het alfabet?", Arrays.asList("A", "B", "C"), "B"), speler);
+                new MeerkeuzeVraag("Wat is een risico bij één gedeelde Product Owner voor meerdere teams?",
+                        List.of("Te veel focus op één team","Geen risico’s; dit werkt altijd","Teams worden volledig autonoom","Vertraging in beslissingen door overbelasting "), "Vertraging in beslissingen door overbelasting "), speler);
         Room easy2 = new EasyRoom(hintSystem,
-                new MeerkeuzeVraag("Wat is 1 + 1?", Arrays.asList("1", "2", "3"), "2"), speler);
-        Room hard1 = new HardRoom(hintSystem, new OpenVraag("Wat is de wortel van 169?", "13"), speler);
-        Room hard2 = new HardRoom(hintSystem, new OpenVraag("Wat is het symbool voor goud?", "Au"), speler);
-        Room boss = new BossRoom(hintSystem, new OpenVraag("Wat is de hoofdstad van IJsland?", "Reykjavik"), speler);
+                new MeerkeuzeVraag("Wat zijn User-stories?",
+                        List.of("- Technische specificaties die door developers worden geschreven.", "Verslagen van wat het team dagelijks heeft gedaan.", "Korte beschrijvingen van functionaliteit vanuit het perspectief van de eindgebruiker.", "Fictieve verhalen om het team te motiveren."),
+                        "Korte beschrijvingen van functionaliteit vanuit het perspectief van de eindgebruiker."), speler);
+
+        Room hard1 = new HardRoom(hintSystem,
+                new MeerkeuzeVraag("Waar bestaat het Acceptatiecriteria uit?",
+                        List.of("De planning van de Sprint.", "De feedback van de klant tijdens de review.", "De feedback van de klant tijdens de review.", "De voorwaarden waaraan een user-story moet voldoen om als 'klaar' te worden beschouwd."),
+                        "De voorwaarden waaraan een user-story moet voldoen om als 'klaar' te worden beschouwd."), speler);
+        Room hard2 = new HardRoom(hintSystem,
+                new MeerkeuzeVraag("Wat is een Backlog?",
+                        List.of("Een verzameling van de sprintverslagen", "Een document met alle fouten in de software.", "Een geordende lijst met taken, features, en verbeteringen die het team moet uitvoeren.", "Een lijst met contactpersonen van de klant."),
+                        "Een geordende lijst met taken, features, en verbeteringen die het team moet uitvoeren."), speler);
+
+        Room boss = new BossRoom(hintSystem,
+                new MeerkeuzeVraag("Hoe meet je succes van gedeelde Scrum-samenwerking?",
+                        List.of("Aantal sprints zonder incidenten.", "Productiviteit per individu.", "Regelmatige feedback, samenwerkingseffectiviteit en klantwaarde.", "Hoeveel taken er worden afgerond per dag."),
+                        "Regelmatige feedback, samenwerkingseffectiviteit en klantwaarde."), speler);
 
         // Kamerlijst (zonder start/boss)
         List<Room> kamerLijst = new ArrayList<>(Arrays.asList(
@@ -47,8 +77,8 @@ public class Game {
         Set<Room> bezocht = new HashSet<>();
 
         // Startkamer
-        CommandHandler.setHuidigeKamer(startRoom);
         startRoom.enter();
+        CommandHandler.setCurrentRoom(startRoom);
         bezocht.add(startRoom);
 
         // Hoofdloop
@@ -76,8 +106,12 @@ public class Game {
                 int keuze = Integer.parseInt(input);
                 Room gekozen = keuzeMap.get(keuze);
                 if (gekozen != null && !bezocht.contains(gekozen)) {
-                    CommandHandler.setHuidigeKamer(gekozen);
                     gekozen.enter();
+                    CommandHandler.setCurrentRoom(gekozen);
+                    if (gekozen.isAfgerond()) {
+                        bezocht.add(gekozen);
+                        continue;
+                    }
                     bezocht.add(gekozen);
                 } else {
                     System.out.println("❌ Ongeldige keuze.");
@@ -89,8 +123,8 @@ public class Game {
 
         // Boss Room
         System.out.println("\n✅ Je hebt alle kamers bezocht. De Boss Room is nu beschikbaar!");
-        CommandHandler.setHuidigeKamer(boss);
         boss.enter();
+        CommandHandler.setCurrentRoom(boss);
 
         System.out.println("\n🎉 Einde van het spel! Goed gedaan.");
     }
